--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -37,29 +37,35 @@
 
 <body>
 
-	<nav id="nav" class="sidebar">
-		<?js= this.nav ?>
+	<nav id="nav" class="sidebar p-3 text-white bg-dark">
+		<div class="sidebar-content">
+			<img src="https://assets.artivain.com/fav/bots/artibot.svg" alt="logo" class="logo">
+			<h1>Thomas Fournier</h1>
+			<?js= this.nav ?>
+		</div>
 	</nav>
 
-	<div id="container" class="content">
+	<div class="content">
 
-		<h1>
-			<?js= title ?>
-		</h1>
+		<div class="container">
 
-		<?js= content ?>
+			<h1>
+				<?js= title ?>
+			</h1>
+
+			<?js= content ?>
+		</div>
+
+		<footer class="mt-5 py-3 bd-dark">
+			Documentation made with <a href="https://github.com/jsdoc/jsdoc">JSDoc
+				<?js= env.version.number ?>
+			</a>
+			<br>
+			Generated on
+			<?js= (new Date()) ?>
+		</footer>
+
 	</div>
-
-	<br class="clear">
-
-	<footer>
-		Documentation made with <a href="https://github.com/jsdoc/jsdoc">JSDoc
-			<?js= env.version.number ?>
-		</a>
-		<br>
-		Generated on
-		<?js= (new Date()) ?>
-	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
