--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -40,32 +40,42 @@
 	<nav id="nav" class="sidebar p-3 text-white bg-dark">
 		<div class="sidebar-content">
 			<img src="https://assets.artivain.com/fav/bots/artibot.svg" alt="logo" class="logo">
-			<h1>Thomas Fournier</h1>
+			<h2>Artibot</h2>
 			<?js= this.nav ?>
 		</div>
 	</nav>
 
 	<div class="content">
 
-		<div class="container">
-
+		<div class="container bg-dark">
 			<h1>
 				<?js= title ?>
 			</h1>
+		</div>
 
+		<div class="container">
 			<?js= content ?>
 		</div>
 
 		<footer class="mt-5 py-3 bd-dark">
-			Documentation made with <a href="https://github.com/jsdoc/jsdoc">JSDoc
-				<?js= env.version.number ?>
-			</a>
-			<br>
-			Generated on
-			<?js= (new Date()) ?>
+			<div class="footer-content container">
+				Documentation made with <a href="https://github.com/jsdoc/jsdoc">JSDoc
+					<?js= env.version.number ?>
+				</a>
+				<br>
+				Generated on <span id="generation-date"></span>
+			</div>
 		</footer>
 
 	</div>
+
+	<script type="module">
+		Date.prototype.today = () => {
+			return ((this.getDate() < 10) ? "0" : "") + this.getDate() + "/" + (((this.getMonth() + 1) < 10) ? "0" : "") + (this.getMonth() + 1) + "/" + this.getFullYear();
+		};
+		const date = <?js= (new Date()) ?>;
+		document.getElementById("generation-date").innerText = date.today();
+	</script>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
