--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -2,10 +2,6 @@
 	width: 400px;
 	height: 100vh;
 	position: fixed;
-	background-color: #2b3031;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .content {
@@ -32,4 +28,21 @@
 
 img {
 	max-width: 100%;
+}
+
+* {
+	scrollbar-width: thin;
+	scrollbar-color: var(--bs-primary) transparent;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--bs-primary);
 }
