--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -38,18 +38,22 @@
 <body>
 
 	<nav id="nav" class="sidebar p-3 text-white bg-dark">
-		<div class="sidebar-content">
-			<div class="w-100 text-center">
-				<img src="https://assets.artivain.com/fav/bots/artibot.svg" alt="logo" class="logo">
-				<h2>Artibot</h2>
+		<div class="sidebar-content w-100 px-md-3 d-flex flex-column h-100">
+			<a href="/" class="text-white text-decoration-none">
+				<div class="w-100 text-center">
+					<img src="https://assets.artivain.com/fav/bots/artibot.svg" alt="logo" class="logo">
+					<h2>Artibot</h2>
+				</div>
+			</a>
+			<div class="menu flex-fill" style="overflow-y: scroll;">
+				<?js= this.nav ?>
 			</div>
-			<?js= this.nav ?>
 		</div>
 	</nav>
 
 	<div class="content">
 
-		<div class="title-bar bg-dark">
+		<div class="title-bar bg-dark text-white mb-5 py-5">
 			<div class="container">
 				<h1>
 					<?js= title ?>
@@ -61,32 +65,27 @@
 			<?js= content ?>
 		</div>
 
-		<footer class="mt-5 py-3 bg-dark">
+		<footer class="mt-5 py-3 bg-dark text-white">
 			<div class="footer-content container">
+				&copy; Artivain <span id="year"></span>
 				Documentation made with <a href="https://github.com/jsdoc/jsdoc">JSDoc
 					<?js= env.version.number ?>
 				</a>
-				<br>
-				Generated on <span id="generation-date"></span>
 			</div>
 		</footer>
 
 	</div>
 
-	<script type="module">
-		Date.prototype.today = () => {
-			return ((this.getDate() < 10) ? "0" : "") + this.getDate() + "/" + (((this.getMonth() + 1) < 10) ? "0" : "") + (this.getMonth() + 1) + "/" + this.getFullYear();
-		};
-		const date = new Date("<?js= (new Date()) ?>");
-		document.getElementById("generation-date").innerText = date.today();
-	</script>
-
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 
+	<script>
+		document.getElementById("year").innerText = new Date().getFullYear();
+	</script>
+
 	<script> prettyPrint(); </script>
-	<script src="scripts/linenumber.js"> </script>
+	<script src="scripts/linenumber.js"></script>
 </body>
 
 </html>
