--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -46,3 +46,21 @@ img {
 ::-webkit-scrollbar-thumb {
 	background-color: var(--bs-primary);
 }
+
+.menu li::marker {
+	content: "";
+}
+
+.menu ul {
+	padding: 0;
+}
+
+.menu a {
+	color: var(--bs-light);
+	text-decoration: none;
+	font-size: 1.1em;
+}
+
+.menu a:hover {
+	color: var(--bs-primary);
+}
