--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -67,7 +67,7 @@
 
 		<footer class="mt-5 py-3 bg-dark text-white">
 			<div class="footer-content container">
-				&copy; Artivain <span id="year"></span>
+				&copy; Artivain <span id="year"></span><br>
 				Documentation made with <a href="https://github.com/jsdoc/jsdoc">JSDoc
 					<?js= env.version.number ?>
 				</a>
@@ -82,12 +82,6 @@
 
 	<script>
 		document.getElementById("year").innerText = new Date().getFullYear();
-	</script>
-
-	<script>
-		document.querySelectorAll("table").forEach(table => {
-			table.classList.add("table");
-		});
 	</script>
 
 	<script> prettyPrint(); </script>
