--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -39,6 +39,10 @@
             <?js } ?>
         <?js }) ?>
     <?js } ?>
+
+		<?js if (doc.augments && doc.augments.length) { ?>
+				<h4 class="subsection-title">Extends <?js= self.partial('augments.tmpl', doc) ?></h4>
+		<?js } ?>
 </header>
 
 <article>
@@ -66,12 +70,6 @@
         <?js } ?>
     <?js } ?>
     </div>
-
-    <?js if (doc.augments && doc.augments.length) { ?>
-        <h3 class="subsection-title">Extends</h3>
-
-        <?js= self.partial('augments.tmpl', doc) ?>
-    <?js } ?>
 
     <?js if (doc.requires && doc.requires.length) { ?>
         <h3 class="subsection-title">Requires</h3>
