More spacing and remove useless ul

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -19,7 +19,7 @@
 
 <section>
 
-<header>
+<header class="mb-4">
     <?js if (!doc.longname || doc.kind !== 'module') { ?>
         <h2><?js if (doc.attribs) { ?><span class="attribs"><?js= doc.attribs ?></span><?js }
             if (doc.ancestors && doc.ancestors.length) { ?>
