--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -2,7 +2,7 @@
 var data = obj;
 var self = this;
 ?>
-<h4 class="name" id="<?js= id ?>"><?js= data.attribs + name + (data.signature ? data.signature : '') ?></h4>
+<h4 class="name mt-4" id="<?js= id ?>"><?js= data.attribs + name + (data.signature ? data.signature : '') ?></h4>
 
 <?js if (data.summary) { ?>
 <p class="summary"><?js= summary ?></p>
@@ -15,12 +15,7 @@ var self = this;
 <?js } ?>
 
 <?js if (data.type && data.type.names) {?>
-    <h5>Type:</h5>
-    <ul>
-        <li>
-            <?js= self.partial('type.tmpl', data.type.names) ?>
-        </li>
-    </ul>
+    <h5>Type: <?js= self.partial('type.tmpl', data.type.names) ?></h5>
 <?js } ?>
 
 <?js= this.partial('details.tmpl', data) ?>
