--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -8,7 +8,7 @@ var self = this;
     <?js } ?>
 
     <?js if (data.kind !== 'namespace') { ?>
-    <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') +
+    <h4 class="name mt-4" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') +
     name + (data.signature || '') ?></h4>
     <?js } ?>
 
