--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -15,7 +15,7 @@ var self = this;
 <?js } ?>
 
 <?js if (data.type && data.type.names) {?>
-    <h5>Type: <?js= self.partial('type.tmpl', data.type.names) ?></h5>
+    <p>Type: <?js= self.partial('type.tmpl', data.type.names) ?></p>
 <?js } ?>
 
 <?js= this.partial('details.tmpl', data) ?>
