--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -20,110 +20,108 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
 
 <?js } ?>
 
-<dl class="details">
+<div class="details">
 
     <?js if (data.version) {?>
-    <dt class="tag-version">Version:</dt>
-    <dd class="tag-version"><ul class="dummy"><li><?js= version ?></li></ul></dd>
+    <p class="tag-version">Version <?js= version ?></p>
     <?js } ?>
 
     <?js if (data.since) {?>
-    <dt class="tag-since">Since:</dt>
-    <dd class="tag-since"><ul class="dummy"><li><?js= since ?></li></ul></dd>
+    <p class="tag-since">Since <?js= since ?></p>
     <?js } ?>
 
     <?js if (data.inherited && data.inherits && !data.overrides) { ?>
-    <dt class="inherited-from">Inherited From:</dt>
-    <dd class="inherited-from"><ul class="dummy"><li>
+    <p class="inherited-from">Inherited From:</p>
+    <p class="inherited-from">
         <?js= this.linkto(data.inherits, this.htmlsafe(data.inherits)) ?>
-    </li></ul></dd>
+    </p>
     <?js } ?>
 
     <?js if (data.overrides) { ?>
-    <dt class="tag-overrides">Overrides:</dt>
-    <dd class="tag-overrides"><ul class="dummy"><li>
+    <p class="tag-overrides">Overrides:</p>
+    <p class="tag-overrides"><ul class="dummy"><li>
         <?js= this.linkto(data.overrides, this.htmlsafe(data.overrides)) ?>
-    </li></ul></dd>
+    </li></ul></p>
     <?js } ?>
 
     <?js if (data.implementations && data.implementations.length) { ?>
-    <dt class="implementations">Implementations:</dt>
-    <dd class="implementations"><ul>
+    <p class="implementations">Implementations:</p>
+    <p class="implementations"><ul>
         <?js data.implementations.forEach(function(impl) { ?>
             <li><?js= self.linkto(impl, self.htmlsafe(impl)) ?></li>
         <?js }); ?>
-    </ul></dd>
+    </ul></p>
     <?js } ?>
 
     <?js if (data.implements && data.implements.length) { ?>
-    <dt class="implements">Implements:</dt>
-    <dd class="implements"><ul>
+    <p class="implements">Implements:</p>
+    <p class="implements"><ul>
         <?js data.implements.forEach(function(impl) { ?>
             <li><?js= self.linkto(impl, self.htmlsafe(impl)) ?></li>
         <?js }); ?>
-    </ul></dd>
+    </ul></p>
     <?js } ?>
 
     <?js if (data.mixes && data.mixes.length) { ?>
-        <dt class="mixes">Mixes In:</dt>
+        <p class="mixes">Mixes In:</p>
 
-        <dd class="mixes"><ul>
+        <p class="mixes"><ul>
         <?js data.mixes.forEach(function(a) { ?>
             <li><?js= self.linkto(a, a) ?></li>
         <?js }); ?>
-        </ul></dd>
+        </ul></p>
     <?js } ?>
 
     <?js if (data.deprecated) { ?>
-        <dt class="important tag-deprecated">Deprecated:</dt><?js
-            if (data.deprecated === true) { ?><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd><?js }
-            else { ?><dd><ul class="dummy"><li><?js= data.deprecated ?></li></ul></dd><?js }
+        <p class="important tag-deprecated">Deprecated:</p><?js
+            if (data.deprecated === true) { ?><p class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></p><?js }
+            else { ?><p><ul class="dummy"><li><?js= data.deprecated ?></li></ul></p><?js }
         ?>
     <?js } ?>
 
     <?js if (data.copyright) {?>
-    <dt class="tag-copyright">Copyright:</dt>
-    <dd class="tag-copyright"><ul class="dummy"><li><?js= copyright ?></li></ul></dd>
+    <p class="tag-copyright">Copyright:</p>
+    <p class="tag-copyright"><ul class="dummy"><li><?js= copyright ?></li></ul></p>
     <?js } ?>
 
     <?js if (data.defaultvalue) {?>
-    <dt class="tag-default">Default Value:</dt>
-    <dd class="tag-default"><ul class="dummy">
+    <p class="tag-default">Default Value:</p>
+    <p class="tag-default"><ul class="dummy">
             <li<?js= defaultObjectClass ?>><?js= data.defaultvalue ?></li>
-        </ul></dd>
+        </ul></p>
     <?js } ?>
 
     <?js if (data.meta && self.outputSourceFiles) {?>
-    <dt class="tag-source">Source:</dt>
-    <dd class="tag-source"><ul class="dummy"><li>
+    <p class="tag-source">Source:</p>
+    <p class="tag-source"><ul class="dummy"><li>
         <?js= self.linkto(meta.shortpath) ?>, <?js= self.linkto(meta.shortpath, 'line ' + meta.lineno, null, 'line' + meta.lineno) ?>
-    </li></ul></dd>
+    </li></ul></p>
     <?js } ?>
 
     <?js if (data.tutorials && tutorials.length) {?>
-    <dt class="tag-tutorial">Tutorials:</dt>
-    <dd class="tag-tutorial">
+    <p class="tag-tutorial">Tutorials:</p>
+    <p class="tag-tutorial">
         <ul><?js tutorials.forEach(function(t) { ?>
             <li><?js= self.tutoriallink(t) ?></li>
         <?js }); ?></ul>
-    </dd>
+    </p>
     <?js } ?>
 
     <?js if (data.see && see.length) {?>
-    <dt class="tag-see">See:</dt>
-    <dd class="tag-see">
+    <p class="tag-see">See:</p>
+    <p class="tag-see">
         <ul><?js see.forEach(function(s) { ?>
             <li><?js= self.linkto(s) ?></li>
         <?js }); ?></ul>
-    </dd>
+    </p>
     <?js } ?>
 
     <?js if (data.todo && todo.length) {?>
-    <dt class="tag-todo">To Do:</dt>
-    <dd class="tag-todo">
+    <p class="tag-todo">To Do:</p>
+    <p class="tag-todo">
         <ul><?js todo.forEach(function(t) { ?>
             <li><?js= t ?></li>
         <?js }); ?></ul>
-    </dd>
+    </p>
     <?js } ?>
-</dl>
+</div>
