--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -20,7 +20,7 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
 
 <?js } ?>
 
-<div class="details">
+<div class="details mb-4">
 
     <?js if (data.version) {?>
     <p class="tag-version">Version <?js= version ?></p>
