--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container" style="min-height: 90vh;">
 			<?js= content ?>
 		</div>
 
